Ajustando el Menu

--- a/index.html
+++ b/index.html
@@ -59,10 +59,17 @@
     </nav>
     <main>
       <section>
-        <div>
-          <p>😎 Simple way to communicate</p>
-          <h1>Actions for Accessibility in Design</h1>
-        </div>
+        <article>
+          <div>
+            <p>😎 Simple way to communicate</p>
+            <h1>Actions for Accessibility in Design</h1>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="./assets/img/hero-image-simple-homepage.png" alt="" />
+          </figure>
+        </article>
       </section>
     </main>
 
