estilizando el main

--- a/index.html
+++ b/index.html
@@ -57,19 +57,28 @@
         <!--<div class="nav__option"></div> -->
       </div>
     </nav>
-    <main>
-      <section>
-        <article>
-          <div>
-            <p>😎 Simple way to communicate</p>
+    <main class="main">
+      <section class="main__section">
+        <div class="section__info">
+          <article class="section__description">
+            <p class="section__text-info">😎 Simple way to communicate</p>
             <h1>Actions for Accessibility in Design</h1>
-          </div>
-        </article>
-        <article>
+            <p class="section__paragraph-info">
+              The fastest way to build and deploy websites with resusable
+              components.
+            </p>
+          </article>
+          <article class="section__button">
+            <button>get started</button>
+            <a href="">Get live demo</a>
+          </article>
+          <article class="section__icon"></article>
+        </div>
+        <div class="main__image">
           <figure>
             <img src="./assets/img/hero-image-simple-homepage.png" alt="" />
           </figure>
-        </article>
+        </div>
       </section>
     </main>
 
