estilos dideño de escritorio

--- a/index.html
+++ b/index.html
@@ -69,10 +69,19 @@
             </p>
           </article>
           <article class="section__button">
-            <button>get started</button>
-            <a href="">Get live demo</a>
+            <a class="button-info" href="">get started</a>
+            <a class="button-link" href="#">Get live demo</a>
           </article>
-          <article class="section__icon"></article>
+          <article class="section__icon">
+            <img src="./assets/img/Done_ring_round_fill.svg" alt="" />
+            <p>No credit card required</p>
+            <img
+              class="icon-round"
+              src="./assets/img/Done_ring_round_fill.svg"
+              alt=""
+            />
+            <p>No software to install</p>
+          </article>
         </div>
         <div class="main__image">
           <figure>
