ajustando el logo en modo oscuro

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
   <body>
     <nav class="nav">
       <div class="nav__logo">
-        <img src="assets/img/alarado-icon-homepage.svg" alt="" srcset="" />
+        <img
+          class="logo"
+          src="assets/img/alarado-icon-homepage.svg"
+          alt="Logo Alarado"
+        />
       </div>
       <ul class="nav__menu">
         <li class="nav__item">
