detalles menu responsivo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img
             src="./assets/img/menu.svg"
             alt="Logo Menu hamburguesa"
-            class="nav__icon"
+            class="nav__icon icon__hamburguer"
           />
         </a>
       </div>
